--- a/2.boot2-webflux/coffeeshop/build.gradle
+++ b/2.boot2-webflux/coffeeshop/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         baseAuthVersion = "3.0.0-SNAPSHOT"
         configurationVersion = "3.0.0-SNAPSHOT"
         jacksonVersion = "2.9.8"
-        kotlinVersion = '1.3.11'
+        kotlinVersion = '1.3.72'
         micrometerVersion = '1.1.3'
         platformLogVersion = "1.2.0"
         serviceProjects = [ "coffeeshop-api" ]
@@ -28,7 +28,6 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
     }
 
-    ext["elasticsearch.version"] = '5.6.8'
     ext["kafka.version"] = '0.9.0.0'
 }
 
@@ -40,6 +39,8 @@ allprojects {
     apply plugin: 'eclipse'
     apply plugin: 'groovy'
     apply plugin: 'java-library'
+    apply plugin: 'kotlin'
+    apply plugin: 'kotlin-spring'
 
     apply plugin: 'io.spring.dependency-management'
 
@@ -133,6 +134,6 @@ configure(subprojects.findAll { project.ext.serviceProjects.contains(it.name) })
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.8.1'
-}
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '4.8.1'
+//}
